# scikit-evaluation

./: .buildinfo  .gitignore  CHANGELOG.rst  HISTORY.rst  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/auto_examples/: category_feature_analysis.doctree  compare_datasets.doctree  index.doctree  learning_curve.doctree  model_selection.doctree  multi_plots_for_sphinx.doctree  outlier_detection.doctree  parallel_coordinates.doctree  partition_regressor.doctree  (+4 more)
_modules/: index.html
api/: modules.html
auto_examples/: category_feature_analysis.html  compare_datasets.html  index.html  learning_curve.html  model_selection.html  multi_plots_for_sphinx.html  outlier_detection.html  parallel_coordinates.html  partition_regressor.html  plot_forest_importances.html  plot_residuals.html  principal_components.html  sg_execution_times.html
examples/: basic_usage.py  category_feature_analysis.py  learning_curve.py  model_selection.py  outlier_detection.py  parallel_coordinates.py  partition_regressor.py  plot_forest_importances.py  plot_residuals.py  plots_in_loop.py
glossary/: glossary.html
license/: license.html
scripts/: bump_version.py
test/: fixtures.py  test_mock.py  test_model_selection.py
tests/: outlier_pipeline.py  test_003_partition_regressor.py  test_004_partition_classifier.py  test_components.py  test_model_selection.py  test_partition_regressor.py
towncrier/: create_news.py
usage/: installation.html  quickstart.html
(+231 files in other folders)
