[tool.poetry]
name = "elphick-template"
version = "0.1.0"
description = ""
authors = ["Greg <11791585+elphick@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "elphick/template"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
sphinx-gallery = "^0.11.1"
sphinx-autodoc-typehints = "^1.18.3"
myst-parser = "^0.18.0"
matplotlib = "^3.7.2"
# packages below here are for plotly and plotly thumbnails
plotly = "^5.15.0"
kaleido = "0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
